tests/errors/test_67.x
// No such type in module

import "standard.x" as std;

fn main() -> i64 {

    let x = std::B { 2 };

}
